@@ -1,8 +1,5 @@
 package tech.kayys.silat.execution;
 
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
 import tech.kayys.silat.model.NodeId;
 import tech.kayys.silat.model.TenantId;
 import tech.kayys.silat.model.WorkflowRunId;
@@ -21,9 +18,6 @@ import java.util.Optional;
  * 🔒 Execution context with strong typing.
  * Opaque to kernel - plugins interpret variables.
  */
-@Data
-@Builder
-@AllArgsConstructor
 public class ExecutionContext {
 
     private String executionId;
@@ -45,9 +39,36 @@ public class ExecutionContext {
     public ExecutionContext(WorkflowRunId runId, TenantId tenantId, Map<String, Object> initialVariables) {
         this.runId = Objects.requireNonNull(runId);
         this.tenantId = Objects.requireNonNull(tenantId);
-        this.variables = new HashMap<>(initialVariables);
+        this.variables = new HashMap<>(initialVariables != null ? initialVariables : Map.of());
         this.nodeStates = new HashMap<>();
         this.events = new ArrayList<>();
+        this.metadata = new HashMap<>();
+        this.workflowState = new HashMap<>();
+    }
+
+    public ExecutionContext(String executionId, String workflowRunId, String nodeId, 
+                          Map<String, Object> variables, Map<String, Object> metadata, 
+                          Map<String, Object> workflowState, Instant createdAt, Instant lastUpdatedAt, 
+                          WorkflowRunId runId, TenantId tenantId, Map<NodeId, NodeExecutionState> nodeStates, 
+                          List<ExecutionEvent> events, Instant startedAt, Instant completedAt) {
+        this.executionId = executionId;
+        this.workflowRunId = workflowRunId;
+        this.nodeId = nodeId;
+        this.variables = variables != null ? new HashMap<>(variables) : new HashMap<>();
+        this.metadata = metadata != null ? new HashMap<>(metadata) : new HashMap<>();
+        this.workflowState = workflowState != null ? new HashMap<>(workflowState) : new HashMap<>();
+        this.createdAt = createdAt;
+        this.lastUpdatedAt = lastUpdatedAt;
+        this.runId = runId;
+        this.tenantId = tenantId;
+        this.nodeStates = nodeStates != null ? new HashMap<>(nodeStates) : new HashMap<>();
+        this.events = events != null ? new ArrayList<>(events) : new ArrayList<>();
+        this.startedAt = startedAt;
+        this.completedAt = completedAt;
+    }
+
+    public static Builder builder() {
+        return new Builder();
     }
 
     public WorkflowRunId getRunId() {
@@ -58,6 +79,15 @@ public class ExecutionContext {
         return tenantId;
     }
 
+    public String getExecutionId() { return executionId; }
+    public void setExecutionId(String executionId) { this.executionId = executionId; }
+
+    public String getWorkflowRunId() { return workflowRunId; }
+    public void setWorkflowRunId(String workflowRunId) { this.workflowRunId = workflowRunId; }
+
+    public String getNodeId() { return nodeId; }
+    public void setNodeId(String nodeId) { this.nodeId = nodeId; }
+
     public void setVariable(String key, Object value) {
         variables.put(key, value);
     }
@@ -67,8 +97,28 @@ public class ExecutionContext {
     }
 
     public Map<String, Object> getVariables() {
-        return Collections.unmodifiableMap(variables);
+        return variables != null ? Collections.unmodifiableMap(variables) : Map.of();
     }
+
+    public void setVariables(Map<String, Object> variables) {
+        this.variables = variables != null ? new HashMap<>(variables) : new HashMap<>();
+    }
+
+    public Map<String, Object> getMetadata() { return metadata; }
+    public void setMetadata(Map<String, Object> metadata) {
+        this.metadata = metadata != null ? new HashMap<>(metadata) : new HashMap<>();
+    }
+
+    public Map<String, Object> getWorkflowState() { return workflowState; }
+    public void setWorkflowState(Map<String, Object> workflowState) {
+        this.workflowState = workflowState != null ? new HashMap<>(workflowState) : new HashMap<>();
+    }
+
+    public Instant getCreatedAt() { return createdAt; }
+    public void setCreatedAt(Instant createdAt) { this.createdAt = createdAt; }
+
+    public Instant getLastUpdatedAt() { return lastUpdatedAt; }
+    public void setLastUpdatedAt(Instant lastUpdatedAt) { this.lastUpdatedAt = lastUpdatedAt; }
 
     public void updateNodeState(NodeId nodeId, NodeExecutionState state) {
         nodeStates.put(nodeId, state);
@@ -79,7 +129,7 @@ public class ExecutionContext {
     }
 
     public Map<NodeId, NodeExecutionState> getAllNodeStates() {
-        return Collections.unmodifiableMap(nodeStates);
+        return nodeStates != null ? Collections.unmodifiableMap(nodeStates) : Map.of();
     }
 
     public void recordEvent(ExecutionEvent event) {
@@ -87,7 +137,7 @@ public class ExecutionContext {
     }
 
     public List<ExecutionEvent> getEvents() {
-        return Collections.unmodifiableList(events);
+        return events != null ? Collections.unmodifiableList(events) : List.of();
     }
 
     public void markStarted() {
@@ -106,7 +156,9 @@ public class ExecutionContext {
         return Optional.ofNullable(completedAt);
     }
 
-    // Strongly typed variables
+    public void setStartedAt(Instant startedAt) { this.startedAt = startedAt; }
+    public void setCompletedAt(Instant completedAt) { this.completedAt = completedAt; }
+
     @SuppressWarnings("unchecked")
     public <T> T getVariable(String name, Class<T> type) {
         if (variables == null)
@@ -120,10 +172,9 @@ public class ExecutionContext {
         return val != null ? val : defaultValue;
     }
 
-    // Variable manipulation (returns new context)
     public ExecutionContext withVariable(String name, Object value, String type) {
         if (variables == null)
-            variables = new java.util.HashMap<>();
+            variables = new HashMap<>();
         variables.put(name, value);
         return this;
     }
@@ -137,15 +188,91 @@ public class ExecutionContext {
 
     public ExecutionContext withMetadata(String key, Object value) {
         if (metadata == null)
-            metadata = new java.util.HashMap<>();
+            metadata = new HashMap<>();
         metadata.put(key, value);
         return this;
     }
 
     public ExecutionContext withWorkflowState(Map<String, Object> updates) {
         if (workflowState == null)
-            workflowState = new java.util.HashMap<>();
+            workflowState = new HashMap<>();
         workflowState.putAll(updates);
         return this;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        ExecutionContext that = (ExecutionContext) o;
+        return Objects.equals(executionId, that.executionId) && 
+               Objects.equals(workflowRunId, that.workflowRunId) && 
+               Objects.equals(nodeId, that.nodeId) && 
+               Objects.equals(variables, that.variables) && 
+               Objects.equals(metadata, that.metadata) && 
+               Objects.equals(workflowState, that.workflowState) && 
+               Objects.equals(createdAt, that.createdAt) && 
+               Objects.equals(lastUpdatedAt, that.lastUpdatedAt) && 
+               Objects.equals(runId, that.runId) && 
+               Objects.equals(tenantId, that.tenantId) && 
+               Objects.equals(nodeStates, that.nodeStates) && 
+               Objects.equals(events, that.events) && 
+               Objects.equals(startedAt, that.startedAt) && 
+               Objects.equals(completedAt, that.completedAt);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(executionId, workflowRunId, nodeId, variables, metadata, workflowState, 
+                           createdAt, lastUpdatedAt, runId, tenantId, nodeStates, events, startedAt, completedAt);
+    }
+
+    @Override
+    public String toString() {
+        return "ExecutionContext{" +
+                "executionId=" + executionId +
+                ", workflowRunId=" + workflowRunId +
+                ", nodeId=" + nodeId +
+                ", runId=" + runId +
+                ", tenantId=" + tenantId +
+                "}";
+    }
+
+    public static class Builder {
+        private String executionId;
+        private String workflowRunId;
+        private String nodeId;
+        private Map<String, Object> variables;
+        private Map<String, Object> metadata;
+        private Map<String, Object> workflowState;
+        private Instant createdAt;
+        private Instant lastUpdatedAt;
+        private WorkflowRunId runId;
+        private TenantId tenantId;
+        private Map<NodeId, NodeExecutionState> nodeStates;
+        private List<ExecutionEvent> events;
+        private Instant startedAt;
+        private Instant completedAt;
+
+        public Builder executionId(String executionId) { this.executionId = executionId; return this; }
+        public Builder workflowRunId(String workflowRunId) { this.workflowRunId = workflowRunId; return this; }
+        public Builder nodeId(String nodeId) { this.nodeId = nodeId; return this; }
+        public Builder variables(Map<String, Object> variables) { this.variables = variables; return this; }
+        public Builder metadata(Map<String, Object> metadata) { this.metadata = metadata; return this; }
+        public Builder workflowState(Map<String, Object> workflowState) { this.workflowState = workflowState; return this; }
+        public Builder createdAt(Instant createdAt) { this.createdAt = createdAt; return this; }
+        public Builder lastUpdatedAt(Instant lastUpdatedAt) { this.lastUpdatedAt = lastUpdatedAt; return this; }
+        public Builder runId(WorkflowRunId runId) { this.runId = runId; return this; }
+        public Builder tenantId(TenantId tenantId) { this.tenantId = tenantId; return this; }
+        public Builder nodeStates(Map<NodeId, NodeExecutionState> nodeStates) { this.nodeStates = nodeStates; return this; }
+        public Builder events(List<ExecutionEvent> events) { this.events = events; return this; }
+        public Builder startedAt(Instant startedAt) { this.startedAt = startedAt; return this; }
+        public Builder completedAt(Instant completedAt) { this.completedAt = completedAt; return this; }
+
+        public ExecutionContext build() {
+            return new ExecutionContext(executionId, workflowRunId, nodeId, variables, metadata, 
+                                      workflowState, createdAt, lastUpdatedAt, runId, tenantId, 
+                                      nodeStates, events, startedAt, completedAt);
+        }
     }
 }
